# zeta-mlx

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml
docs/architecture/: README.md  api.md  cli.md  core.md  inference.md  langchain.md  packages.md  rag.md
docs/design/: README.md  composition-patterns.md  domain-modeling.md  functional-design.md  railway-oriented-programming.md  type-driven-design.md
resources/src/mlx_llm_server/: __init__.py  cli.py  config.py  inference.py  model_loader.py  models.py
resources/src/mlx_llm_server/custom_models/: __init__.py
src/mlx_llm_server/: app.py
