[tool.poetry]
name = "mlx-llm"
version = "0.1.0"
description = "MLX-based LLM Platform for Apple Silicon"
authors = ["ZetaLab <zeta9044@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10,<3.13"

# Workspace packages (path dependencies)
mlx-llm-core = {path = "packages/mlx-llm-core", develop = true}
mlx-llm-inference = {path = "packages/mlx-llm-inference", develop = true}
mlx-llm-api = {path = "packages/mlx-llm-api", develop = true}
mlx-llm-cli = {path = "packages/mlx-llm-cli", develop = true}
mlx-llm-rag = {path = "packages/mlx-llm-rag", develop = true, optional = true}
mlx-llm-langchain = {path = "packages/mlx-llm-langchain", develop = true, optional = true}

[tool.poetry.extras]
rag = ["mlx-llm-rag"]
langchain = ["mlx-llm-langchain"]
all = ["mlx-llm-rag", "mlx-llm-langchain"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
mypy = "^1.13"
ruff = "^0.8"

[tool.poetry.scripts]
mlx-llm = "mlx_llm_cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
