[tool.poetry]
name = "zeta-mlx"
version = "0.1.0"
description = "MLX-based LLM Platform for Apple Silicon"
authors = ["ZetaLab <zeta9044@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.13"

# Workspace packages (path dependencies)
zeta-mlx-core = {path = "packages/core", develop = true}
zeta-mlx-inference = {path = "packages/inference", develop = true}
zeta-mlx-cli = {path = "packages/cli", develop = true}
zeta-mlx-rag = {path = "packages/rag", develop = true, optional = true}
zeta-mlx-langchain = {path = "packages/langchain", develop = true, optional = true}
zeta-mlx-embedding = {path = "packages/embedding", develop = true, optional = true}

[tool.poetry.extras]
rag = ["zeta-mlx-rag"]
langchain = ["zeta-mlx-langchain"]
embedding = ["zeta-mlx-embedding"]
all = ["zeta-mlx-rag", "zeta-mlx-langchain", "zeta-mlx-embedding"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
mypy = "^1.13"
ruff = "^0.8"

[tool.poetry.scripts]
zeta-mlx = "zeta_mlx.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
